Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -1,7 +1,6 @@
 .search-container {
   background-color: $gray-lighter;
   height: 100%;
-  overflow-x: hidden;
   position: relative;
 
   @media (min-width: $screen-md-min) {
@@ -9,6 +8,7 @@
   }
 
   @media (max-width: $screen-xs-max) {
+    overflow-x: visible;
     overflow-y: scroll; /* has to be scroll, not auto */
     -webkit-overflow-scrolling: touch;
   }
